Colab을 통해 생성됨

--- a/02 Tensors.ipynb
+++ b/02 Tensors.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyPsdA/o3hZ0J3YobtSIVDlu",
+      "authorship_tag": "ABX9TyOHiLQRCaiENj6sqVoYxpJn",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -23,7 +23,7 @@
         "colab_type": "text"
       },
       "source": [
-        "<a href=\"https://colab.research.google.com/github/piusAI/Pytorch-Tutorial-Codemy.com/blob/main/02Tensors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
+        "<a href=\"https://colab.research.google.com/github/piusAI/Pytorch-Tutorial-Codemy.com/blob/main/02%20Tensors.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"/></a>"
       ]
     },
     {
@@ -51,7 +51,7 @@
       "metadata": {
         "id": "_HCUoAZylT5Z"
       },
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -79,7 +79,7 @@
         "id": "UJyraHKMlVoe",
         "outputId": "2d524108-6c9c-4799-da97-a77c42844d2e"
       },
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -117,7 +117,7 @@
         "id": "LXDTqek2m8pm",
         "outputId": "1d466f1a-6a8f-4cd3-9983-fd5c4797bea8"
       },
-      "execution_count": 29,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -160,7 +160,7 @@
         "id": "7SOAQNAan8ZB",
         "outputId": "913c2cba-66f7-40ac-daa7-fcc74e9d7582"
       },
-      "execution_count": 34,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -193,7 +193,7 @@
         "id": "mIu16VuNoEB3",
         "outputId": "0543c7b9-9cdd-4310-bace-0bdba5c00369"
       },
-      "execution_count": 41,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -233,7 +233,7 @@
         "id": "aFdaXdbBoqSL",
         "outputId": "6a53fee8-65b0-4a39-e09e-6ad175d084c7"
       },
-      "execution_count": 44,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -261,7 +261,7 @@
         "id": "HKEdlMWTpTN-",
         "outputId": "6ab432eb-dddb-465f-d39b-75815427646c"
       },
-      "execution_count": 49,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -276,7 +276,9 @@
     {
       "cell_type": "markdown",
       "source": [
-        "Check This => [Tensor Documentation](https://docs.pytorch.org/docs/stable/tensors.html)"
+        "Check This => [Tensor Documentation](https://docs.pytorch.org/docs/stable/tensors.html)\n",
+        "\n",
+        "Tensor Hold the data in DL!"
       ],
       "metadata": {
         "id": "hbfiIHGIrC2A"
